# clarav3

./: .gitignore  DEVELOPMENT_NOTES.md  LIVE_TOOL_CALLING_FIX.md  sb  sf
android-voice-assistant/: README.md  settings.gradle.kts
android-voice-assistant/app/: build.gradle.kts  proguard-rules.pro
android-voice-assistant/app/src/main/: AndroidManifest.xml
android-voice-assistant/app/src/main/java/com/ayucare/voiceassistant/: MainActivity.kt  VoiceAssistantViewModel.kt
android-voice-assistant/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: .env.example  README.md  db.py  pyproject.toml  seed.py  seed_data.py  test_schedule_tool.py
backend/tests/: test_activity_completion.py  test_care_services.py  test_health_snapshot_tool.py  test_journal_services.py  test_monkey_patch.py  test_seed_startup.py
backend/voice_assistant/: activity_completion.py  agent.py  care.py  db.py  journal.py  main.py  monkey_patch.py  tools.py
frontend/: .env.example  README.md  metadata.json  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/audio/: AudioCaptureSession.ts  AudioPlaybackQueue.ts
frontend/src/components/layout/: Navigation.tsx
frontend/src/components/ui/: Card.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AppointmentBooking.tsx  Biomarkers.tsx  BiomarkersList.tsx  Care.tsx  Dashboard.tsx  Diet.tsx  FoodItemDetail.tsx  Journal.tsx  LabTestDetail.tsx  Medication.tsx  MentalHealth.tsx  ProductDetail.tsx  Profile.tsx  Progress.tsx  Schedule.tsx  VoiceAssistant.tsx  Workouts.tsx
(+10 files in other folders)
